# nattopages

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.org  about.org  about.rst  contact.markdown  contact.org  flake.nix  index.html  links.org  nattopages.cabal  site.hs  sitemap.xml
.woodpecker/: ci.yml
css/: default.css  highlight.css
dailies/: 1.org  2.org  3.org  4.org  5.org  6.org  7.org
documents/: cv.org
images/dailies/: stub
posts/: 2022-05-13-tnn.org  2022-06-05-feign-1.org  2022-06-19-frustrations.org  2022-06-27-dream-diary-1.org  2022-07-20-chhavi.org  2022-08-10-change.org  2022-08-27-illusions.org  2022-08-28-amends-1.org  2022-08-31-amends-2.org  2022-09-07-qmk-keychron-k8-pro.org  2022-12-05-placeholder.org  2022-12-06-placeholder2.org  amends-1.org  amends-2.org  change.org  chhavi.org  cut-my-hair.org  done-with-concourse-ci.org  dream-diary-1.org  fear.org  feign-1.org  filthy-1.org  frustrations.org  goodbye-nomad.org  gsoc-2022.org  illusions.org  indic-ligatures.org  khoj.org  qmk-keychron-k8-pro.org  the-nugatory-fetish-1.org  the-nugatory-fetish-2.org
scripts/: random-yt-index.js
src/: Main.hs  cabal.project  nattopages.cabal  site.hs
templates/: archive.html  cv.tex  dailies.html  default.html  post-list.html  post-preview-list.html  post.html  sitemap.xml  tag.html  tags.html
