name:               nattopages
version:            0.1.0.0
build-type:         Simple
license:            MIT
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , filepath == 1.*
                  , hakyll == 4.16.*
                  , pandoc == 3.*
                  , process == 1.6.*
                  , text == 2.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
