name:               nattopages
version:            0.1.0.0
build-type:         Simple
license:            MIT
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.*
                  , process == 1.6.*
                  , text == 1.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
